tests/integration/snapshots/integration__snapshot__github_output.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().offline(true).input(input_under_test(\"several-vulnerabilities.yml\")).args([\"--persona=auditor\",\n\"--format=github\"]).run()?"
snapshot_kind: text
---
::error file=@@INPUT@@,line=5,col=1,endLine=5,endColumn=23,title=excessive-permissions::several-vulnerabilities.yml:5:1: overly broad permissions
::error file=@@INPUT@@,line=11,col=5,endLine=11,endColumn=27,title=excessive-permissions::several-vulnerabilities.yml:11:5: overly broad permissions
::error file=@@INPUT@@,line=2,col=1,endLine=3,endColumn=23,title=dangerous-triggers::several-vulnerabilities.yml:2:1: use of fundamentally insecure workflow trigger
::error file=@@INPUT@@,line=15,col=9,endLine=17,endColumn=1,title=template-injection::several-vulnerabilities.yml:15:9: code injection via template expansion
