tests/integration/snapshots/integration__snapshot__invalid_inputs.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().output(OutputMode::Stderr).offline(true).input(input_under_test(\"invalid/invalid-workflow.yml\")).run()?"
---
failed to register input: @@INPUT@@

Caused by:
    0: invalid GitHub Actions workflow: file://@@INPUT@@
       
       Caused by:
           jobs.invalid: "runs-on" is a required property
           jobs.invalid: Additional properties are not allowed ('steps' was unexpected)
           jobs.invalid: "uses" is a required property
           
    1: invalid GitHub Actions definition: file://@@INPUT@@
       
       Caused by:
           Additional properties are not allowed ('jobs', 'on', 'permissions' were unexpected)
           "description" is a required property
           "runs" is a required property
           
    2: failed to register input as workflow or action
