tests/integration/snapshots/integration__snapshot__self_hosted-2.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"self-hosted.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job! (1 suppressed)
